--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,35 @@
 *{
     margin: 0;
     font-family: Roboto;
+    /* font-size: 30px; */
 }
+
 header{
     background-color: #00669F;
     height: 15%;
 }
+
 header p{
     background-color: #1CD1B0 ;
-    padding: 2px;
+    padding: 5px;
     height: 14%;
 }
 
 body{
     height: 100vh;
 }
+
 .name{
     height: 58%;
 }
+
 nav{
     background-color: #001D2D;
     color: white;
     height: 28%;
     margin: 0px;
 }
+
 section{
     min-height:80%;
 }
