--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,10 @@
     /* font-size: 30px; */
 }
 
-/* header{
-    display: block;
-} */
+header{
+    position: sticky;
+    top: 0;
+}
 
 header p{
     background-color: #1CD1B0 ;
@@ -19,10 +20,28 @@ h1{
     /* margin-top: 1%; */
     height: fit-content;
 }
+
+h2{
+    text-align: center;
+    padding-top: 20%;
+}
 body{
     height: 100vh;
     width: 100%;
 }
+
+.card{
+    border: 2px solid blueviolet;
+    border-radius: 20px;
+    display: inline-block;
+    height: 400px;
+    width: 250px;
+}
+
+.card-img{
+    height: 30%;
+}
+
 
 .name{
     align-items: center;
@@ -51,8 +70,11 @@ nav ul li a{
     color: white;
     text-decoration: none;
 }
-.cards{
-    height: 80%;
+main{
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: space-evenly;
 }
 
 footer{
@@ -62,4 +84,11 @@ footer{
     display: flex;
     height: 4%;
     justify-content: center;    
+}
+
+.plus{
+    bottom: 40%;
+    height: 40px;
+    position:fixed;
+    right:1%;
 }
