--- a/css/styles.css
+++ b/css/styles.css
@@ -38,10 +38,20 @@ body{
     width: 250px;
 }
 
-.card-img{
-    height: 30%;
+.card-img{    
+    height: 150px;
+    position: relative;
 }
 
+.img{
+    border-radius: 50%;
+    height: 100px;
+    left:80px;
+    object-fit: cover;
+    position: absolute;
+    top:100px;
+    width: 100px;
+}
 
 .name{
     align-items: center;
