--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,8 @@ body{
 }
 
 .card{
-    border: 2px solid blueviolet;
+    background-color: rgb(231, 229, 228);
+    /* border: 2px solid blueviolet; */
     border-radius: 20px;
     display: inline-block;
     height: 400px;
@@ -40,6 +41,11 @@ body{
 
 .card-img{    
     height: 150px;
+    border-radius: 20px 20px 0 0;
+    position: relative;
+}
+
+.card-content{
     position: relative;
 }
 
@@ -49,7 +55,7 @@ body{
     left:80px;
     object-fit: cover;
     position: absolute;
-    top:100px;
+    top:-50px;
     width: 100px;
 }
 
@@ -101,4 +107,27 @@ footer{
     height: 40px;
     position:fixed;
     right:1%;
+}
+
+.bg-1{
+    background-image:url('../images/bg-batman.jpg') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-2{
+    background-image:url('../images/bg-superman.jpg') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg-3{
+    background-image:url('../images/bg-wonderw.jpg') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fa-heart{
+    color: red;
+    left:20px;
+    position: absolute;
+    top:20px;
 }
