--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 header{
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 header p{
@@ -16,9 +17,9 @@ header p{
 }
 
 h1{
-    margin-left: 50px;
-    /* margin-top: 1%; */
+    font-size: 30px;
     height: fit-content;
+    margin-left: 50px;
 }
 
 h2{
@@ -36,7 +37,9 @@ body{
     border-radius: 20px;
     display: inline-block;
     height: 400px;
+    margin: 50px 0;
     width: 250px;
+    min-width: 250px;
 }
 
 .card-img{    
@@ -89,7 +92,8 @@ nav ul li a{
 main{
     align-items: center;
     display: flex;
-    height: 100%;
+    flex-wrap: wrap;
+    min-height: 100vh;
     justify-content: space-evenly;
 }
 
