--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h2{
     padding-top: 20%;
 }
 body{
-    height: 100vh;
+    height: auto;
     width: 100%;
 }
 
@@ -82,7 +82,7 @@ nav{
 
 nav ul li{
     display: inline-block;
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 nav ul li a{
